refactorList.Of [#00171]